# lambdahack_2

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json
contracts/: deploy.sh
contracts/src/: VerifierContract.sol
frontend/: Dockerfile  package-lock.json  readme.md
frontend/infra/: configMap.yaml  deployment.yaml  ingress.yaml  svc.yaml
frontend/src/: App.css  App.tsx  global.d.ts  index.css  main.tsx
frontend/src/components/: cell.tsx  dialogbox.tsx  grid.tsx  walletButton.tsx
frontend/src/pages/: Body.tsx  Game.tsx
frontend/src/services/: abiCalls.ts  apiCalls.tsx  contract.js  wallet.ts  walletService.ts
mine/: Cargo.toml
mine/elf/: riscv32im-succinct-zkvm-elf
mine/src/: main.rs
quiz/: Cargo.toml
quiz/program/src/: lib.rs  main.rs
quiz/src/: lib.rs  main.rs
rocket-test/: Cargo.toml  VerifierContract.json
rocket-test/src/: main.rs
src/: App.css  App.tsx  lib.rs  main.rs  utils.rs
src/components/: grid.tsx  walletButton.tsx
src/ethereum/: mod.rs
src/pages/: Game.tsx  Home.tsx
src/proof/: sp1.rs
tests/: sp1.rs
