[package]
name = "bounty_ml"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer" }
bincode = "1.3.3"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
clap = { version = "4.5.8", features=["derive"]}
lazy_static = "1.5.0"
reqwest = "0.12.5"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tiny-keccak = "2.0.2"

# Ethereum
ethers = { tag = "v2.0.15-fix-reconnections", features = ["ws", "rustls"], git = "https://github.com/yetanotherco/ethers-rs.git" }

# SP1
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.8-testnet" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.8-testnet" }
