[package]
name = "rocket-test"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mining = { path= "../" }
mine = {path = "../mine"}

ethers = { version = "2.0", features = ["legacy"] }
derive-adhoc = "0.8.4"
sha256 = "1.5.0"
rs_merkle = "1.4.2"
